<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plant_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/category_name"
        style="@style/ListItemTopStyle"
        android:layout_width="180dp"
        android:text="@string/category_name"/>

    <TextView
        android:id="@+id/category_price"
        style="@style/ListItemTopStyle"
        android:layout_width="60dp"
        android:text="@string/category_price"/>

    <TextView
        android:id="@+id/category_quantity"
        style="@style/ListItemTopStyle"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/category_quantity"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/plant_name"
            style="@style/ListItemStyle"
            android:layout_width="180dp" />

        <TextView
            android:id="@+id/plant_price"
            style="@style/ListItemStyle"
            android:layout_width="60dp" />

        <TextView
            android:id="@+id/plant_quantity"
            style="@style/ListItemStyle"
            android:layout_marginLeft="20dp"
            android:layout_width="60dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="280dp">

        <ImageButton
            android:id="@+id/button_sale"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:clickable="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_tag" />
    </RelativeLayout>
</LinearLayout>